# healthai

./: .gitignore  README.md  prescription.py  pyproject.toml  report.html  report.py  report_translated.html  requirements.txt  transpresc.py  transreport.py
analyse/: SYSTEM_ANALYSIS.md  analysis_ollama.md
generation/: report.py
pdf/: pdfreport.py
pdfbengali/: pdfpresc.py  pdfreport.py
src/extraction/: extract_text.py
src/llm/: summary.py
src/parsing/: parser.py
src/preprocessing/: cleaner.py
src/utils/: index.py
translation/: transreport.py
