[project]
name = "healthai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-translate>=3.26.0",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "markdown>=3.10.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
]
