[project]
name = "healthai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.97.0",
    "google-cloud-translate>=3.26.0",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "markdown>=3.10.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]
# Register the PyTorch CUDA 12.8 wheel repository index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # Ensures non-PyTorch packages don't accidentally check this index

# Map your PyTorch dependencies to use the specific registry
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

